--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#1D1E20</color>
+    <color name="colorPrimaryDark">#1D1E20</color>
+    <color name="colorAccent">#11C76F</color>
+    <color name="background">#1D1E20</color>
+    <color name="background_search">#2B2C2F</color>
+    <color name="gray">#ACB1BD</color>
+    <color name="white">#FFFFFF</color>
+    <color name="disabled_button">#8F929D</color>
+    <color name="enabled_button">#11C76F</color>
+    <color name="background_line">#3D4451</color>
+    <color name="background_bottom_sheet_title">#151516</color>
+
+    <color name="white_80">#CCFFFFFF</color>
+    <color name="white_40">#66FFFFFF</color>
 </resources>
